syntax = "proto2";
package squareup.backfila.service;

option java_package = "com.squareup.protos.backfila.service";
option java_generic_services = true;

// In this file: APIs that the service provides to the client.

// TODO(mgersh): figure out cleanest way to determine how to reach the calling service
enum ServiceType {
  CLOUD = 1;
  SQUARE_DC = 2;
}

message ConfigureServiceRequest {
  message BackfillData {
    optional string name = 1;
    repeated string parameter_names = 2;

    // The class name of pipelined data, only set if backfill supports pipelining.
    optional string type_provided = 3;
    optional string type_consumed = 4;

    // If true the backfill will need approval from another user before it can be started.
    optional bool requires_approval = 5;
  }

  // List of all available backfills in this service
  repeated BackfillData backfills = 1;

  optional ServiceType service_type = 2;
}

message ConfigureServiceResponse {

}
